--- a/example/index.html
+++ b/example/index.html
@@ -4,26 +4,25 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 		<title>Soha Jin | 金少海</title>
+		<link rel="stylesheet" href="home.css" />
+
 		<style type="text/css">
 			@font-face {
-				font-family: 'Cascadia Code';
-				src: url('./fonts/CascadiaCode.eot');
+				font-family: 'Noto Sans';
+				src: url('./fonts/NotoSans-Regular.eot');
 				src:
-					url('./fonts/CascadiaCode.eot?#font-spider') format('embedded-opentype'),
-					url('./fonts/CascadiaCode.woff') format('woff'),
-					url('./fonts/CascadiaCode.ttf') format('truetype'),
-					url('./fonts/CascadiaCode.svg') format('svg');
-				font-weight: normal;
-				font-style: normal;
+					url('./fonts/NotoSans-Regular.eot?#font-spider') format('embedded-opentype'),
+					url('./fonts/NotoSans-Regular.woff') format('woff'),
+					url('./fonts/NotoSans-Regular.ttf') format('truetype'),
+					url('./fonts/NotoSans-Regular.svg') format('svg');
 			}
-			body {
-				font-weight: normal;
-				font-style: normal;
-				font-family: 'Cascadia Code';
+			p {
+				font-family: 'Noto Sans';
 			}
 		</style>
 	</head>
 	<body>
-		<h1>Soha Jin</h1>
+		<p>Soha Jin</p>
+		<code>Hello, world.</code>
 	</body>
 </html>
